# e2md-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
rules/: default.yaml  math_science.yaml
src/: main.rs  work_queue.rs
src/models/: config.rs  job.rs  mod.rs  queue_item.rs  rule.rs  split_plan.rs
src/modules/: cleaner.rs  cut.rs  mineru.rs  mod.rs  plugins.rs  process.rs
src/providers/: deepseek.rs  mod.rs  openai.rs  openrouter.rs
src/tests/: mod.rs  model_tests.rs  module_tests.rs  queue_tests.rs  ui_tests.rs  util_tests.rs
src/themes/: catppuccin_mocha.json  dracula.json  mod.rs  nord.json  solarized_light.json
src/ui/: app_state.rs  linux_welcome.rs  main_window.rs  mod.rs  theme.rs
src/ui/pages/: clean.rs  convert.rs  dashboard.rs  mod.rs  queue.rs  settings.rs  split.rs
src/utils/: api_usage.rs  file.rs  log.rs  markdown.rs  mod.rs  net.rs  path.rs  shell.rs
